<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegistroUsuario">

    <ImageView
        android:id="@+id/ivHello"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginVertical="75dp"
        android:src="@drawable/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tituloRegistro"
        app:layout_constraintEnd_toEndOf="@id/dcha"
        app:layout_constraintStart_toStartOf="@id/izq"
        app:layout_constraintTop_toBottomOf="@+id/ivHello"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/introduce_tu_nombre"
        app:layout_constraintEnd_toEndOf="@id/dcha"
        app:layout_constraintStart_toStartOf="@id/izq"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloRegistro" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/introduce_tu_email"
        app:layout_constraintEnd_toEndOf="@id/dcha"
        app:layout_constraintStart_toStartOf="@id/izq"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/introduce_tu_contrasena"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/dcha"
        app:layout_constraintStart_toStartOf="@id/izq"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo" />

    <EditText
        android:id="@+id/etContraseña2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/repite_tu_contrasena"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/dcha"
        app:layout_constraintStart_toStartOf="@id/izq"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña" />

    <Button
        android:id="@+id/btRegistro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/izq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dcha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="354dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="etNombre,etCorreo,etContraseña,etContraseña2" />


</androidx.constraintlayout.widget.ConstraintLayout>