<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beisClaro"
    tools:context=".ui.fragmentos.Home">

    <ImageView
        android:id="@+id/imgPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/cocinaconcatarina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BtAllRecetas"
        style="@style/boton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginVertical="40dp"
        android:text="@string/BtAllRecetas"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imgPrincipal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BtDulces"
        style="@style/boton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginVertical="30dp"
        android:text="@string/BtDulces"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/BtAllRecetas" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BtSaladas"
        style="@style/boton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginVertical="30dp"
        android:text="@string/BtSaladas"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/BtDulces" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="85dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="350dp" />


</androidx.constraintlayout.widget.ConstraintLayout>